--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -88,3 +88,8 @@ dependencies:
     repository: "oci://ghcr.io/platform-autorisatie-beheer-component"
     version: 1.0.0
     condition: pabc.enabled
+  - name: notifynl-omc-nodep
+    alias: omc
+    repository: "https://worth-nl.github.io/helm-charts"
+    version: 0.4.0
+    condition: omc.enabled
