set aspnetcore environment default to empty string

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2434,7 +2434,7 @@ omc:
 
   config:
     aspnetcore:
-      environment: Production
+      environment: ""
     sentry:
       environment: ""
     notify:
