clean up OMC default values for consistency

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2426,7 +2426,7 @@ omc:
   ingress:
     enabled: false
     hostname: ""
-    ingressClass: traefik
+    ingressClass: ""
     tls:
       enabled: false
       secret: ""
