--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -21,9 +21,13 @@ persistentVolume:
 
 keycloak-operator:
   enabled: true
-  # Official Keycloak image: ghcr.io/hostzero-gmbh/keycloak-operator:v0.4.0
-  image:
-    tag: v0.4.0
+  # Adfinis Helm chart wrapping the official Keycloak Operator manifests.
+  # Chart: https://charts.adfinis.com / adfinis/keycloak-operator (appVersion 26.5.4)
+  # Official operator image: quay.io/keycloak/keycloak-operator:26.5.4
+  operator:
+    image:
+      repository: quay.io/keycloak/keycloak-operator
+      tag: "26.5.4"
 
 keycloak:
   additionalOptions:
