--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -24,6 +24,7 @@ keycloak-operator:
   # Adfinis Helm chart wrapping the official Keycloak Operator manifests.
   # Chart: https://charts.adfinis.com / adfinis/keycloak-operator (appVersion 26.5.4)
   # Official operator image: quay.io/keycloak/keycloak-operator:26.5.4
+  fullnameOverride: keycloak-operator
   operator:
     image:
       repository: quay.io/keycloak/keycloak-operator
@@ -108,6 +109,7 @@ keycloak:
   # image parameters for keycloak-operator
   # Official Keycloak image: quay.io/keycloak/keycloak:26.5.4
   image:
+    repository: quay.io/keycloak/keycloak
     tag: 26.5.4
   # -- instances is the new operator-style replica count (falls back to replicaCount)
   instances: "2"
@@ -163,99 +165,99 @@ keycloak:
                       values:
                         - keycloak
                 topologyKey: kubernetes.io/hostname
-        initContainers:
-          - name: keycloak-builder
-            image: quay.io/keycloak/keycloak:26.5.3
-            securityContext:
-              allowPrivilegeEscalation: false
-              runAsNonRoot: true
-              runAsUser: 1000
-              capabilities:
-                drop:
-                  - ALL
-              seccompProfile:
-                type: RuntimeDefault
-            resources:
-              requests:
-                memory: "512Mi"
-                cpu: "250m"
-              limits:
-                memory: "1Gi"
-                cpu: "1000m"
-            command:
-              - /bin/bash
-              - -c
-              - |
-                set -e
-                export KC_DB=postgres
-                export KC_PROXY_HEADERS=xforwarded
-                export KC_CACHE=ispn
-                export KC_METRICS_ENABLED=true
-                export KC_HEALTH_ENABLED=true
-                /opt/keycloak/bin/kc.sh build
-                rm -rf /opt/keycloak/build/quarkus /opt/keycloak/build/providers
-                mkdir -p /opt/keycloak/build/quarkus /opt/keycloak/build/providers
-                cp -a /opt/keycloak/lib/quarkus/. /opt/keycloak/build/quarkus/
-                cp -a /opt/keycloak/providers/. /opt/keycloak/build/providers/ 2>/dev/null || true
-            volumeMounts:
-              - name: keycloak-build-data
-                mountPath: /opt/keycloak/build
-                subPath: ""
-        containers:
-          - name: keycloak
-            securityContext:
-              allowPrivilegeEscalation: false
-              runAsNonRoot: true
-              runAsUser: 1000
-              capabilities:
-                drop:
-                  - ALL
-              seccompProfile:
-                type: RuntimeDefault
-            resources:
-              requests:
-                memory: "512Mi"
-                cpu: "250m"
-              limits:
-                memory: "1Gi"
-                cpu: "1000m"
-            livenessProbe:
-              httpGet:
-                path: /health/live
-                port: 9000
-                scheme: HTTP
-              initialDelaySeconds: 120
-              periodSeconds: 30
-              timeoutSeconds: 5
-              failureThreshold: 5
-            readinessProbe:
-              httpGet:
-                path: /health/ready
-                port: 9000
-                scheme: HTTP
-              initialDelaySeconds: 60
-              periodSeconds: 10
-              timeoutSeconds: 5
-              failureThreshold: 3
-            startupProbe:
-              httpGet:
-                path: /health/started
-                port: 9000
-                scheme: HTTP
-              initialDelaySeconds: 30
-              periodSeconds: 10
-              timeoutSeconds: 5
-              failureThreshold: 30
-            volumeMounts:
-              - name: keycloak-build-data
-                mountPath: /opt/keycloak/lib/quarkus
-                subPath: quarkus
-              - name: keycloak-build-data
-                mountPath: /opt/keycloak/providers
-                subPath: providers
-        volumes:
-          - name: keycloak-build-data
-            emptyDir: {}
+      initContainers:
+        - name: keycloak-builder
+          image: quay.io/keycloak/keycloak:26.5.3
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            runAsUser: 1000
+            capabilities:
+              drop:
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "1000m"
+          command:
+            - /bin/bash
+            - -c
+            - |
+              set -e
+              export KC_DB=postgres
+              export KC_PROXY_HEADERS=xforwarded
+              export KC_CACHE=ispn
+              export KC_METRICS_ENABLED=true
+              export KC_HEALTH_ENABLED=true
+              /opt/keycloak/bin/kc.sh build
+              rm -rf /opt/keycloak/build/quarkus /opt/keycloak/build/providers
+              mkdir -p /opt/keycloak/build/quarkus /opt/keycloak/build/providers
+              cp -a /opt/keycloak/lib/quarkus/. /opt/keycloak/build/quarkus/
+              cp -a /opt/keycloak/providers/. /opt/keycloak/build/providers/ 2>/dev/null || true
+          volumeMounts:
+            - name: keycloak-build-data
+              mountPath: /opt/keycloak/build
+              subPath: ""
+      containers:
+        - name: keycloak
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            runAsUser: 1000
+            capabilities:
+              drop:
+                - ALL
+            seccompProfile:
+              type: RuntimeDefault
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "1000m"
+          livenessProbe:
+            httpGet:
+              path: /health/live
+              port: 9000
+              scheme: HTTP
+            initialDelaySeconds: 120
+            periodSeconds: 30
+            timeoutSeconds: 5
+            failureThreshold: 5
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: 9000
+              scheme: HTTP
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          startupProbe:
+            httpGet:
+              path: /health/started
+              port: 9000
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 30
+          volumeMounts:
+            - name: keycloak-build-data
+              mountPath: /opt/keycloak/lib/quarkus
+              subPath: quarkus
+            - name: keycloak-build-data
+              mountPath: /opt/keycloak/providers
+              subPath: providers
+      volumes:
+        - name: keycloak-build-data
+          emptyDir: {}
   # -- new keycloak entrypoint configuration, falls back to proxyHeaders if headers is not set
   proxy:
     headers: "xforwarded"
