--- a/charts/podiumd/templates/keycloak-secrets.yaml
+++ b/charts/podiumd/templates/keycloak-secrets.yaml
@@ -1,7 +1,8 @@
-{{- if .Values.keycloak.enabled }}
-# Database credentials secret for Keycloak Operator
+{{- if or (index .Values "keycloak-operator").enabled .Values.keycloak.enabled }}
+# Database credentials secret for Keycloak.
+# Referenced by the Keycloak CR (keycloak-operator) and the legacy Bitnami chart.
 # Note: Uses .Values.keycloak.externalDatabase.user (not .username) to maintain
-# compatibility with the legacy Bitnami Keycloak chart structure
+# compatibility with the legacy Bitnami Keycloak chart structure.
 apiVersion: v1
 kind: Secret
 metadata:
@@ -14,11 +15,21 @@ stringData:
   database_username: {{ .Values.keycloak.externalDatabase.user | quote }}
   database_password: {{ .Values.keycloak.externalDatabase.password | quote }}
 {{- end }}
----
 {{- if or (index .Values "keycloak-operator").enabled .Values.keycloak.enabled }}
-# Initial admin credentials for Keycloak Operator bootstrap.
-# The operator reads this secret on first boot to set the admin account.
-# Secret name must match: <cr-name>-initial-admin
+---
+# Bootstrap admin credentials for Keycloak.
+#
+# keycloak-operator: Helm applies Secrets before Custom Resources, so this secret
+# exists in etcd before the Keycloak CR is applied. The operator's informer cache
+# will contain it when it first reconciles the CR, so it will not attempt to
+# create its own (random-password) version. Secret name must match: <cr-name>-initial-admin.
+#
+# Legacy Bitnami chart: same secret is used for the initial admin setup.
+#
+# NOTE: For existing installations (migrated DB), Keycloak ignores this secret
+# because an admin user already exists. It is only consumed on first boot with
+# an empty database. Use keycloak.auth.adminUser / keycloak.auth.adminPassword
+# to configure the desired bootstrap credentials.
 apiVersion: v1
 kind: Secret
 metadata:
