--- a/charts/podiumd/templates/keycloak-secrets.yaml
+++ b/charts/podiumd/templates/keycloak-secrets.yaml
@@ -15,16 +15,14 @@ stringData:
   database_username: {{ .Values.keycloak.externalDatabase.user | quote }}
   database_password: {{ .Values.keycloak.externalDatabase.password | quote }}
 {{- end }}
-{{- if or (index .Values "keycloak-operator").enabled .Values.keycloak.enabled }}
+{{- if (index .Values "keycloak-operator").enabled }}
 ---
-# Bootstrap admin credentials for Keycloak.
+# Bootstrap admin credentials for Keycloak operator.
 #
-# keycloak-operator: Helm applies Secrets before Custom Resources, so this secret
-# exists in etcd before the Keycloak CR is applied. The operator's informer cache
-# will contain it when it first reconciles the CR, so it will not attempt to
-# create its own (random-password) version. Secret name must match: <cr-name>-initial-admin.
-#
-# Legacy Bitnami chart: same secret is used for the initial admin setup.
+# Uses a custom name (keycloak-podiumd-admin) instead of the operator's default
+# (<cr-name>-initial-admin) to avoid conflicts. The operator will auto-generate
+# its default secret, but we override it by explicitly setting bootstrapAdmin.user.secret
+# in the Keycloak CR.
 #
 # NOTE: For existing installations (migrated DB), Keycloak ignores this secret
 # because an admin user already exists. It is only consumed on first boot with
@@ -33,7 +31,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ printf "%s-initial-admin" (default "keycloak" .Values.keycloak.name) }}
+  name: keycloak-podiumd-admin
   labels:
     {{- include "podiumd.labels" . | nindent 4 }}
     app.kubernetes.io/component: keycloak
