--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -143,7 +143,9 @@ keycloak:
     enabled: false
     # image parameters for keycloak-config-cli
     # Official keycloak-config-cli image: quay.io/adorsys/keycloak-config-cli:6.4.0-28.5.0
-    image: quay.io/adorsys/keycloak-config-cli:6.4.0-28.5.0
+    image:
+      repository: quay.io/adorsys/keycloak-config-cli
+      tag: "6.4.0-28.5.0"
   podTemplate:
     metadata:
       labels:
