add repo but structure still needs to change

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2424,6 +2424,7 @@ omc:
   enabled: false
   app:
     overrides:
+      # repository: ghcr.io/worth-nl/notifynl-omc
       tag: "1.17.18"
   config:
     aspnetcore:
