set oidcFrontendLogoutWithHints to false for OIP

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1748,6 +1748,7 @@ openinwoner:
       port: 587
       useTLS: true
     searchIndexInitContainer: true
+    oidcFrontendLogoutWithHints: false    
   persistence:
     size: 10Gi
     existingClaim: openinwoner
